syntax = "proto3";
package user;

option go_package = "user-service/pb/user;user";

message RegisterUserResponse {
    string id = 1;
}   